# berg-cli

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yml  pr_sizing.yml  release.yml
src/: berg.rs  berg_repo.rs  commands.rs  lib.rs  main.rs  models.rs
src/models/: berg.rs  challenge.rs  ctf.rs  repo_config.rs
web/: index.html  package-lock.json  server.js
